SNOW-28699: added some Unit test to TravisCI and started collecting the code coverage.