@@ -13,6 +13,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jackson.version>2.9.4</jackson.version>
     <httpclient.version>4.5.5</httpclient.version>
+    <powermock.version>1.7.4</powermock.version>
+    <jacoco.version>0.8.1</jacoco.version>
+    <jacoco.skip.instrument>true</jacoco.skip.instrument>
     <!-- the following fields are for setting unique information in the RPM Release field
          Note: setting timestamp without hyphens for use in the RPM release field (hypens not allowed) -->
     <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
@@ -60,6 +63,39 @@
           <fork>true</fork>
           <source>1.7</source>
           <target>1.7</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco.version}</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>post-unit-test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <systemPropertyVariables>
+            <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+          </systemPropertyVariables>
+          <skip>${jacoco.skip.instrument}</skip>
         </configuration>
       </plugin>
       <plugin>
@@ -167,22 +203,15 @@
       <type>jar</type>
     </dependency>
     <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.9.5</version>
-      <scope>test</scope>
-      <type>jar</type>
-    </dependency>
-    <dependency>
       <groupId>org.powermock</groupId>
       <artifactId>powermock-module-junit4</artifactId>
-      <version>1.5.6</version>
+      <version>${powermock.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.powermock</groupId>
       <artifactId>powermock-api-mockito</artifactId>
-      <version>1.5.6</version>
+      <version>${powermock.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -375,7 +404,7 @@
          <property>
           <name>!not-self-contained-jar</name>
         </property>
-     </activation>
+      </activation>
       <build>
         <plugins>
           <plugin>
@@ -652,6 +681,32 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>java-9</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>
+                --illegal-access=warn
+              </argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <argLine>
+                --illegal-access=warn
+              </argLine>
+            </configuration>
           </plugin>
         </plugins>
       </build>
